After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710169 - Blinking update button doesn't look right
Blinking update button doesn't look right
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-10-15 08:34 UTC by Andreas Nilsson
Modified: 2013-11-16 03:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Change the style for update counters (9.78 KB, patch)
2013-11-16 03:05 UTC, Matthias Clasen
committed Details | Review
how it looks (301.52 KB, image/png)
2013-11-16 03:07 UTC, Matthias Clasen
  Details

Description Andreas Nilsson 2013-10-15 08:34:13 UTC
There is something about the styling of the blinking update button that doesn't feel right. I think it might be due to the fact that it's flat rather than with a small gradient.
Comment 1 Jakub Steiner 2013-11-12 13:56:36 UTC
Addressed with a9c971277044e10cc43f9706e6e857129d9ee671
Comment 2 Jakub Steiner 2013-11-13 17:52:31 UTC
Reopening. I think the animation, even toned down like this, is completely unnecessary. Pending updates are already served by the counter. I would go for using a colored tag/rectangle like we do in Polari though, not just append the number on the label in brackets:

https://raw.github.com/gnome-design-team/gnome-mockups/master/software/version2/software-updates-indicator.png
Comment 3 Matthias Clasen 2013-11-16 03:05:53 UTC
Created attachment 259954 [details] [review]
Change the style for update counters

Instead of a throbbing button, we now use a separate label
with a blue background for the counter.
Comment 4 Matthias Clasen 2013-11-16 03:07:13 UTC
Created attachment 259955 [details]
how it looks
Comment 5 Matthias Clasen 2013-11-16 03:20:34 UTC
Attachment 259954 [details] pushed as 576265f - Change the style for update counters