Change the style for update counters

Instead of a throbbing button, we now use a separate label
with a blue background for the counter.

https://bugzilla.gnome.org/show_bug.cgi?id=710169